--- a/asporto/index.html
+++ b/asporto/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Consegna a domicilio:</strong> gli hamburger a casa tua a soli 1,5€, gratis per ordini superiori ai 40€.</h4>
+                <h4><strong>Consegna a domicilio:</strong> gli hamburger e le birre artigianali a casa tua a soli 1,5€, gratis per ordini superiori ai 40€.</h4>
             </div>
         </div>
         <div class="row show-for-small">
@@ -220,10 +220,6 @@
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
                             <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
                         </li>
-                        <li>
-                            <h3>T-Bone Steak &emsp; 4 per etto</h3>
-                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -244,16 +240,132 @@
                                 <h3>Dolceburger &emsp; 6</h3>
                                 <p>pan brioche ripieno di crema al caffè e cioccolato croccante, servito con delicato zabaione</p>
                             </li>
-                            <li>
-                                <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
-                                <p>cantucci e anicetti artigianali, serviti con vino di visciole</p>
-                            </li>
                         </ul>
                     </div>
-                    <div class="title-divider">
-                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
-                        <br>
-                    </div>
+                </div>
+            </div>
+            <!-- birra -->
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Birre artigianali alla Spina <br><small>Per Asporti e consegne a domicilio solo media</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Castelli Italicum &emsp;  6</h3>
+                            <p>bionda fruttata 5%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Palmares &emsp;  6</h3>
+                            <p>rossa stile inglese 5,6%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Mukkellerina &emsp;  6</h3>
+                            <p>keller leggermente amara 4,7%</p>
+                        </li>
+                        <li>
+                            <h3>Gambrinus Helles &emsp;  6</h3>
+                            <p>keller non amara 4,9%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Mr Wolf &emsp;  6</h3>
+                            <p>triple 9,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Mirabilia &emsp;  6</h3>
+                            <p>american pale ale 6,5%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Hattori Hanzo &emsp;  6</h3>
+                            <p>doppia ipa amara 8,2%</p>
+                        </li>
+                        <li>
+                            <h3>Zotler Korbinian &emsp;  6</h3>
+                            <p>rossa stile tedesco 5,2%</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Birre artigianali in bottiglia</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Gambrinus Pils 50cl &emsp; 6</h3>
+                            <p>bionda pils 4,9%</p>
+                        </li>
+                        <li>
+                            <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
+                            <p>mazen 6,3%</p>
+                        </li>
+                        <li>
+                            <h3>Zotler 1447 50cl &emsp; 6</h3>
+                            <p>bionda non filtrata tedesca 4,9%</p>
+                        </li>
+                        <li>
+                            <h3>Zotler Weisse 50cl &emsp; 6</h3>
+                            <p>weisse 5,2% </p>
+                        </li>
+                        <li>
+                            <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
+                            <p>weisse 5,2% </p>
+                        </li>
+                        <li>
+                            <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
+                            <p>barley wine 10,5% </p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
+                            <p>ale 6% </p>
+                        </li>
+                        <li>
+                            <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
+                            <p>rossa tedesca 7,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Calix Niger 75cl &emsp; 14</h3>
+                            <p>chocolate stout 6,7%</p>
+                        </li>
+                        <li>
+                            <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
+                            <p>nera tedesca 5,5% </p>
+                        </li>
+                        <li>
+                            <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
+                            <p>tedesca senza glutine biologica 4,9%</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+<!-- birra fine-->
+<!-- vino -->
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Vino in Bottiglia</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Libenter Rosso Piceno &emsp;15</h3>
+                            <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Rosso Piceno DOC &emsp;11,5</h3>
+                            <p>valmusone</p>
+                        </li>
+                        <li>
+                            <h3>Lacrima DOC &emsp;12,5</h3>
+                            <p>valmusone</p>
+                        </li>
+                        <li>
+                            <h3>Syrah IGT &emsp;25</h3>
+                            <p>valmusone</p>
+                        </li>
+                        <li>
+                            <h3>Misco Verdicchio Jesi &emsp;15</h3>
+                            <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Prosecco DOCG Extra Dry &emsp;15</h3>
+                            <p>cantina serre di pederiva</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
