--- a/menu/index.html
+++ b/menu/index.html
@@ -266,27 +266,27 @@
                             <p>rossa stile inglese 5,6%</p>
                         </li>
                         <li>
-                            <h3>Castelli Brevis Furor &emsp;  4 / 6</h3>
-                            <p>ipa amara 6,3%</p>
-                        </li>
-                        <li>
-                            <h3>Gambrinus Weisse &emsp;  4 / 6</h3>
-                            <p>weisse 5,2</p>
+                            <h3>Mukkeller Mukkellerina &emsp;  4 / 6</h3>
+                            <p>keller leggermente amara 4,7%</p>
                         </li>
                         <li>
                             <h3>Gambrinus Helles &emsp;  4 / 6</h3>
-                            <p>hell 4,9%</p>
+                            <p>keller non amara 4,9%</p>
                         </li>
                         <li>
-                            <h3>MC77 Ape Regina &emsp;  4 / 6</h3>
-                            <p>belgian ale al miele 6,2%</p>
+                            <h3>Mukkeller Mr Wolf &emsp;  4 / 6</h3>
+                            <p>triple 9,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Mirabilia &emsp;  4 / 6</h3>
+                            <p>american pale ale 6,5%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
                             <p>doppia ipa amara 8,2%</p>
                         </li>
                         <li>
-                            <h3>Zotler Dunkel &emsp;  4 / 6</h3>
+                            <h3>Zotler Korbinian &emsp;  4 / 6</h3>
                             <p>rossa stile tedesco 5,2%</p>
                         </li>
                     </ul>
@@ -302,17 +302,30 @@
                                 <p>bionda pils 4,9%</p>
                             </li>
                             <li>
-                                <h3>Irseer Urtrunk 50cl &emsp; 6</h3>
-                                <p>helles export 5,6%</p>
+                                <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
+                                <p>mazen 6,3%</p>
                             </li>
                             <li>
-                                <h3>Zotler Festwochen 50cl &emsp; 6</h3>
-                                <p>bionda tedesca 5,5%</p>
+                                <h3>Zotler 1447 50cl &emsp; 6</h3>
+                                <p>bionda non filtrata tedesca 4,9%</p>
                             </li>
                             <li>
                                 <h3>Zotler Weisse 50cl &emsp; 6</h3>
                                 <p>weisse 5,2% </p>
                             </li>
+                            <li>
+                                <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
+                                <p>weisse 5,2% </p>
+                            </li>
+                            <li>
+                                <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
+                                <p>barley wine 10,5% </p>
+                            </li>
+                            <li>
+                                <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
+                                <p>ale 6% </p>
+                            </li>
+
                         </ul>
                     </div>
                     <div class="paragraph-divider">
@@ -328,10 +341,6 @@
                             <li>
                                 <h3>Castelli Calix Niger 75cl &emsp; 14</h3>
                                 <p>chocolate stout 6,7%</p>
-                            </li>
-                            <li>
-                                <h3>Camba Coffee Porter 33cl &emsp; 6</h3>
-                                <p>chocolate stout 5,4%</p>
                             </li>
                             <li>
                                 <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
@@ -375,6 +384,18 @@
                         <li>
                             <h3>Libenter Rosso Piceno &emsp;15</h3>
                             <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Rosso Piceno DOC &emsp;11,5</h3>
+                            <p>valmusone</p>
+                        </li>
+                        <li>
+                            <h3>Lacrima DOC &emsp;12,5</h3>
+                            <p>valmusone</p>
+                        </li>
+                        <li>
+                            <h3>Syrah IGT &emsp;25</h3>
+                            <p>valmusone</p>
                         </li>
                         <li>
                             <h3>Misco Verdicchio Jesi &emsp;15</h3>
