--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 			</div>
 			<div class="medium-6 large-6 columns">
 				<h3>Asporto / Consegne</h3>
-				<!-- <h2>Ca' Vecchia Beerstrot</h2> -->
-				<!-- <p>Dal <strong>1 Giugno</strong> al <strong>31 Agosto</strong> siamo aperti <strong>tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
 				<p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
                 <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
+			</div>
+			<div class="medium-12 large-12 columns">
 				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
 				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
 				<span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
