--- a/asporto/index.html
+++ b/asporto/index.html
@@ -73,7 +73,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Ora consegnamo direttamente a casa tua. <br>Ca' Vecchia Beerstrot ti è sempre più vicino.</h1>
+                <h1 class="text-highlight" itemprop="description">Hamburger direttamente a casa tua. <br>Ca' Vecchia Beerstrot ti è sempre più vicino.</h1>
             </div>
         </div>
         <div class="row">
