--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto / Consegne</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
