--- a/asporto/index.html
+++ b/asporto/index.html
@@ -98,7 +98,8 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine. Gratis per ordini superiori ai 40€.</h4>
+                <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
+                <h4>Effettuiamo le consegne a Filottrano Centro e Montoro.</h4>
             </div>
         </div>
         <div class="row show-for-small">
