--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<li class="divider"></li>
 				<li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/asporto/">Asporto / Consegne</a></li>
+				<li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
 				<li class="divider"></li>
 				<li><a href="http://www.beerstrot.it/social/">Social</a></li>
 				<li class="divider"></li>
@@ -102,7 +102,7 @@
 				<!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
 			</div>
 			<div class="medium-6 large-6 columns">
-				<h3>Asporto / Consegne</h3>
+				<h3>Asporto e Consegne</h3>
 				<p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
                 <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
 			</div>
@@ -134,7 +134,7 @@
 	<div class="panel-home-n">
 		<div class="row">
 			<div class="medium-6 large-6 columns">
-				<h1>Asporto / Consegne</h1>
+				<h1>Asporto e Consegne</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -144,7 +144,7 @@
 			<div class="medium-6 large-6 columns">
 				<p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa sotto i denti?</p>
 				<p>Abbiamo un menù anche per questo.</p>
-				<a role="button" href="http://www.beerstrot.it/asporto/">Scopri il Menù Asporto / Consegne &rarr;</a>
+				<a role="button" href="http://www.beerstrot.it/asporto/">Scopri il Menù Asporto e Consegne &rarr;</a>
 			</div>
 		</div>
 	</div>
