--- a/asporto/index.html
+++ b/asporto/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Menù | Asporto / Domicilio</title>
+    <title>Beerstrot | Menù | Asporto e Consegne</title>
     <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2019"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Asporto / Domicilio"/>
+    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Asporto e Consegne"/>
     <meta name="twitter:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Ca' Vecchia Beerstrot Asporto / Domicilio"/>
+    <meta property="og:title" content="Ca' Vecchia Beerstrot Asporto e Consegne"/>
     <meta property="og:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
@@ -59,7 +59,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/asporto/">Asporto / Consegne</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
@@ -86,7 +86,7 @@
     <div class="panel-asporto">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto / Consegna a Domicilio</h1>
+                <h1>Asporto e Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
