--- a/menu/index.html
+++ b/menu/index.html
@@ -298,34 +298,37 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Gambrinus Pils 50cl &emsp; 6</h3>
-                                <p>bionda pils 4,9%</p>
-                            </li>
-                            <li>
-                                <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
-                                <p>mazen 6,3%</p>
-                            </li>
-                            <li>
-                                <h3>Zotler 1447 50cl &emsp; 6</h3>
-                                <p>bionda non filtrata tedesca 4,9%</p>
-                            </li>
-                            <li>
-                                <h3>Zotler Weisse 50cl &emsp; 6</h3>
-                                <p>weisse 5,2% </p>
-                            </li>
-                            <li>
-                                <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
-                                <p>weisse 5,2% </p>
-                            </li>
-                            <li>
-                                <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
-                                <p>barley wine 10,5% </p>
-                            </li>
-                            <li>
-                                <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
-                                <p>ale 6% </p>
-                            </li>
-
+                            <h3>Gambrinus Helles &emsp;  6</h3>
+                            <p>keller non amara 4,9%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Italicum &emsp;  6</h3>
+                            <p>bionda fruttata 5%</p>
+                        </li>
+                        <li>
+                            <h3>Zotler Korbinian &emsp;  6</h3>
+                            <p>rossa stile tedesco 5,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Palmares &emsp;  6</h3>
+                            <p>rossa stile inglese 5,6%</p>
+                        </li>
+                        <li>
+                            <h3>Mr Wolf &emsp;  6</h3>
+                            <p>triple 9,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Mirabilia &emsp;  6</h3>
+                            <p>american pale ale 6,5%</p>
+                        </li>
+                        <li>
+                            <h3>MC-77 Bow Tie &emsp;  6</h3>
+                            <p>ipa 6,4%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Hattori Hanzo &emsp;  6</h3>
+                            <p>doppia ipa amara 8,2%</p>
+                        </li>
                         </ul>
                     </div>
                     <div class="paragraph-divider">
