--- a/menu/index.html
+++ b/menu/index.html
@@ -258,20 +258,20 @@
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
+                            <h3>Gambrinus Helles &emsp;  4 / 6</h3>
+                            <p>keller non amara 4,9%</p>
+                        </li>
+                        <li>
                             <h3>Castelli Italicum &emsp;  4 / 6</h3>
                             <p>bionda fruttata 5%</p>
                         </li>
                         <li>
+                            <h3>Zotler Korbinian &emsp;  4 / 6</h3>
+                            <p>rossa stile tedesco 5,2%</p>
+                        </li>
+                        <li>
                             <h3>Castelli Palmares &emsp;  4 / 6</h3>
                             <p>rossa stile inglese 5,6%</p>
-                        </li>
-                        <li>
-                            <h3>Mukkeller Mukkellerina &emsp;  4 / 6</h3>
-                            <p>keller leggermente amara 4,7%</p>
-                        </li>
-                        <li>
-                            <h3>Gambrinus Helles &emsp;  4 / 6</h3>
-                            <p>keller non amara 4,9%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Mr Wolf &emsp;  4 / 6</h3>
@@ -282,12 +282,12 @@
                             <p>american pale ale 6,5%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
-                            <p>doppia ipa amara 8,2%</p>
+                            <h3>MC-77 Bow Tie &emsp;  4 / 6</h3>
+                            <p>ipa amara 6,4%</p>
                         </li>
                         <li>
-                            <h3>Zotler Korbinian &emsp;  4 / 6</h3>
-                            <p>rossa stile tedesco 5,2%</p>
+                            <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
+                            <p>doppia ipa amara 8,2%</p>
                         </li>
                     </ul>
                 </div>
