--- a/asporto/index.html
+++ b/asporto/index.html
@@ -261,7 +261,7 @@
                         </li>
                         <li>
                             <h3>Zotler Korbinian &emsp;  6</h3>
-                            <p>rossa stile tedesco 5,2%</p>
+                            <p>rossa tedesca 5,2%</p>
                         </li>
                         <li>
                             <h3>Castelli Palmares &emsp;  6</h3>
