--- a/menu/index.html
+++ b/menu/index.html
@@ -307,7 +307,7 @@
                         </li>
                         <li>
                             <h3>Zotler Korbinian &emsp;  6</h3>
-                            <p>rossa stile tedesco 5,2%</p>
+                            <p>rossa tedesca 5,2%</p>
                         </li>
                         <li>
                             <h3>Castelli Palmares &emsp;  6</h3>
@@ -384,10 +384,6 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Vino in Bottiglia</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Libenter Rosso Piceno &emsp;15</h3>
-                            <p>tavignano</p>
-                        </li>
                         <li>
                             <h3>Rosso Piceno DOC &emsp;11,5</h3>
                             <p>valmusone</p>
