--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-	<title>Beerstrot | Specialisti in Hamburger Gourmet</title>
-	<meta name="description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
+	<title>Beerstrot | Specialisti in Hamburger Goduriosi</title>
+	<meta name="description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
 	<link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
 	<meta name="author" content="Ca' Vecchia Beerstrot"/>
 	<meta name="copyright" content="Beerstrot Copyright (c) 2019"/>
 	<meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="@beerstrot"/>
-	<meta name="twitter:title" content="Specialisti in Hamburger Gourmet"/>
-	<meta name="twitter:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
+	<meta name="twitter:title" content="Specialisti in Hamburger Goduriosi"/>
+	<meta name="twitter:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
 	<meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<meta name="twitter:url" content="http://www.beerstrot.it"/>
 	<meta property="fb:app_id" content="1549149915357715"/>
 	<meta property="og:url" content="http://www.beerstrot.it"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:title" content="Specialisti in Hamburger Gourmet"/>
-	<meta property="og:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
+	<meta property="og:title" content="Specialisti in Hamburger Goduriosi"/>
+	<meta property="og:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
 	<meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="http://www.beerstrot.it"/>
@@ -75,7 +75,7 @@
 	<header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
 		<div class="row">
 			<div class="small-12 columns">
-				<h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger gourmet<br>e la birra artigianale</h1>
+				<h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger goduriosi<br>e la birra artigianale</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -124,7 +124,7 @@
 				<a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona.</p>
+				<p>Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
 				<p>Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
 				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità, non disdegnando eccellenze tedesche di nicchia come Zotler e Mariahilfer.</p>
 				<a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
