--- a/menu/index.html
+++ b/menu/index.html
@@ -295,7 +295,7 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
-                    <div class="paragraph-divider">
+                    <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Gambrinus Pils 50cl &emsp; 6</h3>
