--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="medium-12 large-12 columns">
 				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
 				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-				<span class="show-for-small"><a role="button" href="m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i> Ordina Online</a></span>
+				<span class="show-for-small"><a role="button" href="m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fa fa-facebook-messenger"></i> Ordina Online</a></span>
 			</div>
 		</div>
 	</div>
